# shuri

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
shuri/: __init__.py  __main__.py  cli.py
shuri/checks/: __init__.py  antivirus.py  battery.py  cpu.py  disk.py  eventlogs.py  memory.py  network.py  services.py  system.py  updates.py
shuri/core/: __init__.py  exceptions.py  registry.py  runner.py  scoring.py  storage.py
shuri/models/: __init__.py  cpu.py  disk.py  network.py  report.py  system.py
shuri/reporters/: __init__.py  html.py  json.py  markdown.py  terminal.py
shuri/utils/: __init__.py  constants.py  formatting.py  helpers.py  platform.py
tests/: test_checks.py  test_cli.py  test_formatting.py  test_reporting.py  test_scoring.py  test_system_check.py  test_system_info.py  test_terminal_reporter.py  test_v020.py
