[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "shuri-cli"
version = "0.2.0"
description = "Fast, transparent workstation health diagnostics for support and security teams."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Shuri Contributors" }]
keywords = ["diagnostics", "health", "support", "windows", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "jinja2>=3.1.4",
  "psutil>=6.0.0",
  "rich>=13.7.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "black>=24.4.2",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "types-psutil",
]

[project.scripts]
shuri = "shuri.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["shuri"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
exclude = ["tests"]
